tp4_bis/src/ejemplo.output
Estado 25 conflictos: 2 reducción(ones)/reducción(ones)
Estado 40 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 41 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 146 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 151 conflictos: 3 reducción(ones)/reducción(ones)
Estado 158 conflictos: 4 desplazamiento(s)/reducción(ones)
Estado 159 conflictos: 29 desplazamiento(s)/reducción(ones)
Estado 232 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracionExterna
    4     | sentencia
    5     | ERROR_LEXICO
    6     | error ';'

    7 declaracion: especDeclaracion listaDeclaradoresBis ';'

    8 especDeclaracionBis: /* vacío */
    9                    | especDeclaracion

   10 especDeclaracion: especClase especDeclaracionBis
   11                 | especTipo especDeclaracionBis

   12 listaDeclaradoresBis: /* vacío */
   13                     | listaDeclaradores

   14 listaDeclaradores: declarador
   15                  | listaDeclaradores ',' declarador

   16 declarador: decla
   17           | decla '=' inicializador

   18 inicializador: expAsignacion
   19              | '{' listaDeInicializadores '}'

   20 listaDeInicializadores: inicializador
   21                       | listaDeInicializadores ',' inicializador

   22 especClase: CLASE_ALMACENAMIENTO

   23 especTipo: TIPO_DATO
   24          | especStructUnion
   25          | ID

   26 especStructUnion: STRUCT_UNION ID opcionLista
   27                 | STRUCT_UNION '{' listaDeclaracionesStruct '}'

   28 listaDeclaracionesStruct: declaracionStruct
   29                         | listaDeclaracionesStruct declaracionStruct

   30 declaracionStruct: listaCalificadores declaradoresStruct ';'

   31 listaCalificadores: especTipo listaCalificadoresBis

   32 listaCalificadoresBis: /* vacío */
   33                      | listaCalificadores

   34 opcionLista: /* vacío */
   35            | '{' listaDeclaracionesStruct '}'

   36 declaradoresStruct: declaStruct
   37                   | declaradoresStruct ',' declaStruct

   38 declaStruct: decla
   39            | declaBis ':' expCondicional

   40 decla: puntero declaradorDirecto
   41      | declaradorDirecto

   42 declaBis: /* vacío */
   43         | decla

   44 declaradorDirecto: ID
   45                  | declaradorDirecto '[' expCondicionalBis ']'
   46                  | declaradorDirecto '(' listaTiposParametros ')'

   47 listaTiposParametros: listaParametros
   48                     | listaParametros ',' '.' '.' '.'

   49 listaTiposParametrosBis: /* vacío */
   50                        | listaTiposParametros

   51 listaParametros: declaracionParametro
   52                | listaParametros ',' declaracionParametro

   53 declaracionParametro: especDeclaracion decla
   54                     | especDeclaracion declaradorAbstracto

   55 nombreTipo: listaCalificadores declaradorAbstractoBis

   56 declaradorAbstracto: puntero declaradorAbstractoDirecto
   57                    | declaradorAbstractoDirecto
   58                    | puntero

   59 declaradorAbstractoBis: /* vacío */
   60                       | declaradorAbstracto

   61 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
   62                           | declaradorAbstractoDirecto opcionExpresion
   63                           | opcionExpresion

   64 opcionExpresion: '[' expCondicionalBis ']'
   65                | '(' listaTiposParametrosBis ')'

   66 sentencia: sentCompuesta
   67          | sentExpresion
   68          | sentSeleccion
   69          | sentIteracion
   70          | sentSalto
   71          | sentEtiquetada

   72 sentExpresion: exp ';'
   73              | ';'

   74 sentCompuesta: '{' decalracionOSentencia '}'

   75 decalracionOSentencia: /* vacío */
   76                      | decalracionOSentencia listaDeclaraciones
   77                      | decalracionOSentencia listaSentencias

   78 listaDeclaraciones: declaracionExterna
   79                   | listaDeclaraciones declaracionExterna

   80 listaDeclaracionesBis: /* vacío */
   81                      | listaDeclaraciones

   82 listaSentencias: sentencia
   83                | listaSentencias sentencia

   84 puntero: '*'
   85        | '*' puntero

   86 sentSeleccion: IF '(' exp ')' sentencia
   87              | IF '(' exp ')' sentencia ELSE sentencia
   88              | SWITCH '(' exp ')' sentencia

   89 sentIteracion: WHILE '(' exp ')' sentencia
   90              | DO sentencia WHILE '(' exp ')' ';'
   91              | FOR '(' expOp ';' expOp ';' expOp ')' sentencia

   92 sentEtiquetada: CASE expCondicional ':' sentencia
   93               | DEFAULT ':' sentencia
   94               | ID ':' sentencia

   95 sentSalto: RETURN expOp ';'
   96          | BREAK ';'
   97          | CONTINUE ';'
   98          | GOTO ID ';'

   99 exp: expAsignacion
  100    | exp ',' expAsignacion

  101 expOp: /* vacío */
  102      | exp

  103 expAsignacion: expCondicional
  104              | expUnaria operAsignacion expAsignacion

  105 expCondicional: expOr
  106               | expOr '?' exp ':' expCondicional

  107 expCondicionalBis: /* vacío */
  108                  | expCondicional

  109 operAsignacion: '='
  110               | ASIGNACION_INCREMENTO
  111               | ASIGNACION_DECREMENTO
  112               | ASIGNACION_PRODUCTO
  113               | ASIGNACION_DIVISION

  114 expOr: expAnd
  115      | expOr OR expAnd

  116 expAnd: expIgualdad
  117       | expAnd AND expIgualdad

  118 expIgualdad: expRelacional
  119            | expIgualdad IGUALDAD expRelacional
  120            | expIgualdad DESIGUALDAD expRelacional

  121 expRelacional: expAditiva
  122              | expRelacional '<' expAditiva
  123              | expRelacional '>' expAditiva
  124              | expRelacional MENORIGUAL expAditiva
  125              | expRelacional MAYORIGUAL expAditiva

  126 expAditiva: expMultiplicativa
  127           | expAditiva '+' expMultiplicativa
  128           | expAditiva '-' expMultiplicativa

  129 expMultiplicativa: expUnaria
  130                  | expMultiplicativa '*' expUnaria
  131                  | expMultiplicativa '/' expUnaria
  132                  | expMultiplicativa '%' expUnaria

  133 expUnaria: expSufijo
  134          | INCREMENTO expUnaria
  135          | DECREMENTO expUnaria
  136          | '-' expUnaria
  137          | '+' expUnaria
  138          | '~' expUnaria
  139          | '!' expUnaria
  140          | '&' expUnaria
  141          | puntero expUnaria
  142          | SIZEOF '(' expUnaria ')'
  143          | SIZEOF '(' nombreTipo ')'

  144 expSufijo: expPrimaria
  145          | expSufijo '[' exp ']'
  146          | expSufijo '(' listaArgumentos ')'
  147          | expSufijo '.' ID
  148          | expSufijo FLECHA ID
  149          | expSufijo INCREMENTO
  150          | expSufijo DECREMENTO

  151 expPrimaria: ID
  152            | ENTERO
  153            | REAL
  154            | CTE_CARACTER
  155            | LITERAL_CADENA
  156            | NULL1
  157            | '(' exp ')'

  158 listaArgumentos: /* vacío */
  159                | expAsignacion
  160                | listaArgumentos ',' expAsignacion

  161 declaracionExterna: definicionFuncion
  162                   | declaracion

  163 definicionFuncion: especDeclaracion decla listaDeclaracionesBis sentCompuesta


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 139
'%' (37) 132
'&' (38) 140
'(' (40) 46 61 65 86 87 88 89 90 91 142 143 146 157
')' (41) 46 61 65 86 87 88 89 90 91 142 143 146 157
'*' (42) 84 85 130
'+' (43) 127 137
',' (44) 15 21 37 48 52 100 160
'-' (45) 128 136
'.' (46) 48 147
'/' (47) 131
':' (58) 39 92 93 94 106
';' (59) 6 7 30 72 73 90 91 95 96 97 98
'<' (60) 122
'=' (61) 17 109
'>' (62) 123
'?' (63) 106
'[' (91) 45 64 145
']' (93) 45 64 145
'{' (123) 19 27 35 74
'}' (125) 19 27 35 74
'~' (126) 138
error (256) 6
REAL (258) 153
ENTERO (259) 152
LITERAL_CADENA (260) 155
OR (261) 115
AND (262) 117
IGUALDAD (263) 119
DESIGUALDAD (264) 120
MAYORIGUAL (265) 125
MENORIGUAL (266) 124
INCREMENTO (267) 134 149
DECREMENTO (268) 135 150
ASIGNACION_INCREMENTO (269) 110
ASIGNACION_DECREMENTO (270) 111
ASIGNACION_PRODUCTO (271) 112
ASIGNACION_DIVISION (272) 113
FLECHA (273) 148
IF (274) 86 87
ELSE (275) 87
SWITCH (276) 88
WHILE (277) 89 90
DO (278) 90
FOR (279) 91
RETURN (280) 95
CONTINUE (281) 97
BREAK (282) 96
CASE (283) 92
DEFAULT (284) 93
GOTO (285) 98
ERROR_LEXICO (286) 5
NULL1 (287) 156
TIPO_DATO (288) 23
CLASE_ALMACENAMIENTO (289) 22
STRUCT_UNION (290) 26 27
ID (291) 25 26 44 94 98 147 148 151
SIZEOF (292) 142 143
CTE_CARACTER (293) 154


No terminales con las reglas donde aparecen

$accept (61)
    en la izquierda: 0
input (62)
    en la izquierda: 1 2, en la derecha: 0 2
line (63)
    en la izquierda: 3 4 5 6, en la derecha: 2
declaracion (64)
    en la izquierda: 7, en la derecha: 162
especDeclaracionBis (65)
    en la izquierda: 8 9, en la derecha: 10 11
especDeclaracion (66)
    en la izquierda: 10 11, en la derecha: 7 9 53 54 163
listaDeclaradoresBis (67)
    en la izquierda: 12 13, en la derecha: 7
listaDeclaradores (68)
    en la izquierda: 14 15, en la derecha: 13 15
declarador (69)
    en la izquierda: 16 17, en la derecha: 14 15
inicializador (70)
    en la izquierda: 18 19, en la derecha: 17 20 21
listaDeInicializadores (71)
    en la izquierda: 20 21, en la derecha: 19 21
especClase (72)
    en la izquierda: 22, en la derecha: 10
especTipo (73)
    en la izquierda: 23 24 25, en la derecha: 11 31
especStructUnion (74)
    en la izquierda: 26 27, en la derecha: 24
listaDeclaracionesStruct (75)
    en la izquierda: 28 29, en la derecha: 27 29 35
declaracionStruct (76)
    en la izquierda: 30, en la derecha: 28 29
listaCalificadores (77)
    en la izquierda: 31, en la derecha: 30 33 55
listaCalificadoresBis (78)
    en la izquierda: 32 33, en la derecha: 31
opcionLista (79)
    en la izquierda: 34 35, en la derecha: 26
declaradoresStruct (80)
    en la izquierda: 36 37, en la derecha: 30 37
declaStruct (81)
    en la izquierda: 38 39, en la derecha: 36 37
decla (82)
    en la izquierda: 40 41, en la derecha: 16 17 38 43 53 163
declaBis (83)
    en la izquierda: 42 43, en la derecha: 39
declaradorDirecto (84)
    en la izquierda: 44 45 46, en la derecha: 40 41 45 46
listaTiposParametros (85)
    en la izquierda: 47 48, en la derecha: 46 50
listaTiposParametrosBis (86)
    en la izquierda: 49 50, en la derecha: 65
listaParametros (87)
    en la izquierda: 51 52, en la derecha: 47 48 52
declaracionParametro (88)
    en la izquierda: 53 54, en la derecha: 51 52
nombreTipo (89)
    en la izquierda: 55, en la derecha: 143
declaradorAbstracto (90)
    en la izquierda: 56 57 58, en la derecha: 54 60 61
declaradorAbstractoBis (91)
    en la izquierda: 59 60, en la derecha: 55
declaradorAbstractoDirecto (92)
    en la izquierda: 61 62 63, en la derecha: 56 57 62
opcionExpresion (93)
    en la izquierda: 64 65, en la derecha: 62 63
sentencia (94)
    en la izquierda: 66 67 68 69 70 71, en la derecha: 4 82 83 86 87
    88 89 90 91 92 93 94
sentExpresion (95)
    en la izquierda: 72 73, en la derecha: 67
sentCompuesta (96)
    en la izquierda: 74, en la derecha: 66 163
decalracionOSentencia (97)
    en la izquierda: 75 76 77, en la derecha: 74 76 77
listaDeclaraciones (98)
    en la izquierda: 78 79, en la derecha: 76 79 81
listaDeclaracionesBis (99)
    en la izquierda: 80 81, en la derecha: 163
listaSentencias (100)
    en la izquierda: 82 83, en la derecha: 77 83
puntero (101)
    en la izquierda: 84 85, en la derecha: 40 56 58 85 141
sentSeleccion (102)
    en la izquierda: 86 87 88, en la derecha: 68
sentIteracion (103)
    en la izquierda: 89 90 91, en la derecha: 69
sentEtiquetada (104)
    en la izquierda: 92 93 94, en la derecha: 71
sentSalto (105)
    en la izquierda: 95 96 97 98, en la derecha: 70
exp (106)
    en la izquierda: 99 100, en la derecha: 72 86 87 88 89 90 100 102
    106 145 157
expOp (107)
    en la izquierda: 101 102, en la derecha: 91 95
expAsignacion (108)
    en la izquierda: 103 104, en la derecha: 18 99 100 104 159 160
expCondicional (109)
    en la izquierda: 105 106, en la derecha: 39 92 103 106 108
expCondicionalBis (110)
    en la izquierda: 107 108, en la derecha: 45 64
operAsignacion (111)
    en la izquierda: 109 110 111 112 113, en la derecha: 104
expOr (112)
    en la izquierda: 114 115, en la derecha: 105 106 115
expAnd (113)
    en la izquierda: 116 117, en la derecha: 114 115 117
expIgualdad (114)
    en la izquierda: 118 119 120, en la derecha: 116 117 119 120
expRelacional (115)
    en la izquierda: 121 122 123 124 125, en la derecha: 118 119 120
    122 123 124 125
expAditiva (116)
    en la izquierda: 126 127 128, en la derecha: 121 122 123 124 125
    127 128
expMultiplicativa (117)
    en la izquierda: 129 130 131 132, en la derecha: 126 127 128 130
    131 132
expUnaria (118)
    en la izquierda: 133 134 135 136 137 138 139 140 141 142 143, en la derecha:
    104 129 130 131 132 134 135 136 137 138 139 140 141 142
expSufijo (119)
    en la izquierda: 144 145 146 147 148 149 150, en la derecha: 133
    145 146 147 148 149 150
expPrimaria (120)
    en la izquierda: 151 152 153 154 155 156 157, en la derecha: 144
listaArgumentos (121)
    en la izquierda: 158 159 160, en la derecha: 146 160
declaracionExterna (122)
    en la izquierda: 161 162, en la derecha: 3 78 79
definicionFuncion (123)
    en la izquierda: 163, en la derecha: 161


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                  desplazar e ir al estado 2
    error                 desplazar e ir al estado 3
    REAL                  desplazar e ir al estado 4
    ENTERO                desplazar e ir al estado 5
    LITERAL_CADENA        desplazar e ir al estado 6
    INCREMENTO            desplazar e ir al estado 7
    DECREMENTO            desplazar e ir al estado 8
    IF                    desplazar e ir al estado 9
    SWITCH                desplazar e ir al estado 10
    WHILE                 desplazar e ir al estado 11
    DO                    desplazar e ir al estado 12
    FOR                   desplazar e ir al estado 13
    RETURN                desplazar e ir al estado 14
    CONTINUE              desplazar e ir al estado 15
    BREAK                 desplazar e ir al estado 16
    CASE                  desplazar e ir al estado 17
    DEFAULT               desplazar e ir al estado 18
    GOTO                  desplazar e ir al estado 19
    ERROR_LEXICO          desplazar e ir al estado 20
    NULL1                 desplazar e ir al estado 21
    TIPO_DATO             desplazar e ir al estado 22
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 23
    STRUCT_UNION          desplazar e ir al estado 24
    ID                    desplazar e ir al estado 25
    SIZEOF                desplazar e ir al estado 26
    CTE_CARACTER          desplazar e ir al estado 27
    '+'                   desplazar e ir al estado 28
    '-'                   desplazar e ir al estado 29
    '*'                   desplazar e ir al estado 30
    '('                   desplazar e ir al estado 31
    ';'                   desplazar e ir al estado 32
    '{'                   desplazar e ir al estado 33
    '~'                   desplazar e ir al estado 34
    '!'                   desplazar e ir al estado 35
    '&'                   desplazar e ir al estado 36

    line                ir al estado 37
    declaracion         ir al estado 38
    especDeclaracion    ir al estado 39
    especClase          ir al estado 40
    especTipo           ir al estado 41
    especStructUnion    ir al estado 42
    sentencia           ir al estado 43
    sentExpresion       ir al estado 44
    sentCompuesta       ir al estado 45
    puntero             ir al estado 46
    sentSeleccion       ir al estado 47
    sentIteracion       ir al estado 48
    sentEtiquetada      ir al estado 49
    sentSalto           ir al estado 50
    exp                 ir al estado 51
    expAsignacion       ir al estado 52
    expCondicional      ir al estado 53
    expOr               ir al estado 54
    expAnd              ir al estado 55
    expIgualdad         ir al estado 56
    expRelacional       ir al estado 57
    expAditiva          ir al estado 58
    expMultiplicativa   ir al estado 59
    expUnaria           ir al estado 60
    expSufijo           ir al estado 61
    expPrimaria         ir al estado 62
    declaracionExterna  ir al estado 63
    definicionFuncion   ir al estado 64


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 line: error . ';'

    ';'  desplazar e ir al estado 65


estado 4

  153 expPrimaria: REAL .

    $default  reduce usando la regla 153 (expPrimaria)


estado 5

  152 expPrimaria: ENTERO .

    $default  reduce usando la regla 152 (expPrimaria)


estado 6

  155 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 155 (expPrimaria)


estado 7

  134 expUnaria: INCREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 67
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 8

  135 expUnaria: DECREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 68
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 9

   86 sentSeleccion: IF . '(' exp ')' sentencia
   87              | IF . '(' exp ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 69


estado 10

   88 sentSeleccion: SWITCH . '(' exp ')' sentencia

    '('  desplazar e ir al estado 70


estado 11

   89 sentIteracion: WHILE . '(' exp ')' sentencia

    '('  desplazar e ir al estado 71


estado 12

   90 sentIteracion: DO . sentencia WHILE '(' exp ')' ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    IF              desplazar e ir al estado 9
    SWITCH          desplazar e ir al estado 10
    WHILE           desplazar e ir al estado 11
    DO              desplazar e ir al estado 12
    FOR             desplazar e ir al estado 13
    RETURN          desplazar e ir al estado 14
    CONTINUE        desplazar e ir al estado 15
    BREAK           desplazar e ir al estado 16
    CASE            desplazar e ir al estado 17
    DEFAULT         desplazar e ir al estado 18
    GOTO            desplazar e ir al estado 19
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 72
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    ';'             desplazar e ir al estado 32
    '{'             desplazar e ir al estado 33
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    sentencia          ir al estado 73
    sentExpresion      ir al estado 44
    sentCompuesta      ir al estado 45
    puntero            ir al estado 46
    sentSeleccion      ir al estado 47
    sentIteracion      ir al estado 48
    sentEtiquetada     ir al estado 49
    sentSalto          ir al estado 50
    exp                ir al estado 51
    expAsignacion      ir al estado 52
    expCondicional     ir al estado 53
    expOr              ir al estado 54
    expAnd             ir al estado 55
    expIgualdad        ir al estado 56
    expRelacional      ir al estado 57
    expAditiva         ir al estado 58
    expMultiplicativa  ir al estado 59
    expUnaria          ir al estado 60
    expSufijo          ir al estado 61
    expPrimaria        ir al estado 62


estado 13

   91 sentIteracion: FOR . '(' expOp ';' expOp ';' expOp ')' sentencia

    '('  desplazar e ir al estado 74


estado 14

   95 sentSalto: RETURN . expOp ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    $default  reduce usando la regla 101 (expOp)

    puntero            ir al estado 46
    exp                ir al estado 75
    expOp              ir al estado 76
    expAsignacion      ir al estado 52
    expCondicional     ir al estado 53
    expOr              ir al estado 54
    expAnd             ir al estado 55
    expIgualdad        ir al estado 56
    expRelacional      ir al estado 57
    expAditiva         ir al estado 58
    expMultiplicativa  ir al estado 59
    expUnaria          ir al estado 60
    expSufijo          ir al estado 61
    expPrimaria        ir al estado 62


estado 15

   97 sentSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 77


estado 16

   96 sentSalto: BREAK . ';'

    ';'  desplazar e ir al estado 78


estado 17

   92 sentEtiquetada: CASE . expCondicional ':' sentencia

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero            ir al estado 46
    expCondicional     ir al estado 79
    expOr              ir al estado 54
    expAnd             ir al estado 55
    expIgualdad        ir al estado 56
    expRelacional      ir al estado 57
    expAditiva         ir al estado 58
    expMultiplicativa  ir al estado 59
    expUnaria          ir al estado 80
    expSufijo          ir al estado 61
    expPrimaria        ir al estado 62


estado 18

   93 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 81


estado 19

   98 sentSalto: GOTO . ID ';'

    ID  desplazar e ir al estado 82


estado 20

    5 line: ERROR_LEXICO .

    $default  reduce usando la regla 5 (line)


estado 21

  156 expPrimaria: NULL1 .

    $default  reduce usando la regla 156 (expPrimaria)


estado 22

   23 especTipo: TIPO_DATO .

    $default  reduce usando la regla 23 (especTipo)


estado 23

   22 especClase: CLASE_ALMACENAMIENTO .

    $default  reduce usando la regla 22 (especClase)


estado 24

   26 especStructUnion: STRUCT_UNION . ID opcionLista
   27                 | STRUCT_UNION . '{' listaDeclaracionesStruct '}'

    ID   desplazar e ir al estado 83
    '{'  desplazar e ir al estado 84


estado 25

   25 especTipo: ID .
   94 sentEtiquetada: ID . ':' sentencia
  151 expPrimaria: ID .

    ':'  desplazar e ir al estado 85

    TIPO_DATO             reduce usando la regla 25 (especTipo)
    CLASE_ALMACENAMIENTO  reduce usando la regla 25 (especTipo)
    STRUCT_UNION          reduce usando la regla 25 (especTipo)
    ID                    reduce usando la regla 25 (especTipo)
    '*'                   reduce usando la regla 25 (especTipo)
    '*'                   [reduce usando la regla 151 (expPrimaria)]
    ';'                   reduce usando la regla 25 (especTipo)
    ';'                   [reduce usando la regla 151 (expPrimaria)]
    $default              reduce usando la regla 151 (expPrimaria)


estado 26

  142 expUnaria: SIZEOF . '(' expUnaria ')'
  143          | SIZEOF . '(' nombreTipo ')'

    '('  desplazar e ir al estado 86


estado 27

  154 expPrimaria: CTE_CARACTER .

    $default  reduce usando la regla 154 (expPrimaria)


estado 28

  137 expUnaria: '+' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 87
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 29

  136 expUnaria: '-' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 88
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 30

   84 puntero: '*' .
   85        | '*' . puntero

    $default  reduce usando la regla 84 (puntero)

    puntero  ir al estado 89


estado 31

  157 expPrimaria: '(' . exp ')'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero            ir al estado 46
    exp                ir al estado 90
    expAsignacion      ir al estado 52
    expCondicional     ir al estado 53
    expOr              ir al estado 54
    expAnd             ir al estado 55
    expIgualdad        ir al estado 56
    expRelacional      ir al estado 57
    expAditiva         ir al estado 58
    expMultiplicativa  ir al estado 59
    expUnaria          ir al estado 60
    expSufijo          ir al estado 61
    expPrimaria        ir al estado 62


estado 32

   73 sentExpresion: ';' .

    $default  reduce usando la regla 73 (sentExpresion)


estado 33

   74 sentCompuesta: '{' . decalracionOSentencia '}'

    $default  reduce usando la regla 75 (decalracionOSentencia)

    decalracionOSentencia  ir al estado 91


estado 34

  138 expUnaria: '~' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 92
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 35

  139 expUnaria: '!' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 93
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 36

  140 expUnaria: '&' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 21
    ID              desplazar e ir al estado 66
    SIZEOF          desplazar e ir al estado 26
    CTE_CARACTER    desplazar e ir al estado 27
    '+'             desplazar e ir al estado 28
    '-'             desplazar e ir al estado 29
    '*'             desplazar e ir al estado 30
    '('             desplazar e ir al estado 31
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 46
    expUnaria    ir al estado 94
    expSufijo    ir al estado 61
    expPrimaria  ir al estado 62


estado 37

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 38

  162 declaracionExterna: declaracion .

    $default  reduce usando la regla 162 (declaracionExterna)


estado 39

    7 declaracion: especDeclaracion . listaDeclaradoresBis ';'
  163 definicionFuncion: especDeclaracion . decla listaDeclaracionesBis sentCompuesta

    ID   desplazar e ir al estado 95
    '*'  desplazar e ir al estado 30

    $default  reduce usando la regla 12 (listaDeclaradoresBis)

    listaDeclaradoresBis  ir al estado 96
    listaDeclaradores     ir al estado 97
    declarador            ir al estado 98
    decla                 ir al estado 99
    declaradorDirecto     ir al estado 100
    puntero               ir al estado 101


estado 40
